@@ -311,6 +311,11 @@ CVS code -
   get_escape_seq_kbinput()
 	- Add proper support for the keypad values and escape sequences
 	  generated by the NumLock glitch. (DLR)
+	- Add ignore_seq parameter.  If a sequence is recognized but
+	  ignored, we will now return ERR and set ignore_seq to TRUE, and
+	  if a sequence is unrecognized, we will now return ERR and set
+	  ignore_seq to FALSE.  Also, here and elsewhere, don't bother
+	  assigning ERR to retval when that's its initial value. (DLR)
   get_mouseinput()
 	- Don't ungetch() anything if there's no control key and no meta
 	  key defined in the shortcut we clicked. (DLR)
